# D-Vision

./: .gitignore  README.md  app.py  camera.py  config.py  database.py  pyproject.toml  recognition.py  requirements.txt  test_cam.py  ui.py
docs/: HARDWARE_BUILD_GUIDE.md
src/dvision/: __init__.py  __main__.py  app.py  camera.py  config.py  database.py  py.typed  recognition.py  ui.py
